Wed Sep 06 01:26:17 BST 2006  Olly Betts <olly@survex.com>

	* omindex.cc: If popen() fails, treat it as a read error.

Wed Sep 06 00:49:47 BST 2006  Olly Betts <olly@survex.com>

	* omindex.cc: Fix escaping of filenames to cast characters to
	  "unsigned char" so that isalnum() works correctly everywhere.
	  Not a security hole as dangerous characters were still being
	  escaped.

Tue Sep 05 06:49:30 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am: Run htmlparsetest on "make check".

Tue Sep 05 06:46:18 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am,htmlparse.cc,htmlparse.h,metaxmlparse.cc,metaxmlparse.h,
	  myhtmlparse.h,omindex.cc,xmlparse.cc,xmlparse.h: Parse the XML from
	  OpenDocument and OpenOffice using new subclasses of HtmlParser.
	  Only extract meta.xml once.

Tue Sep 05 06:45:02 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am,htmlparsetest.cc: Add htmlparsetest which tests the
	  MyHtmlParser class.

Tue Sep 05 04:36:46 BST 2006  Olly Betts <olly@survex.com>

	* omindex.cc: Note UTF-8 runes for pdfinfo and pdftotext.

Tue Sep 05 04:29:21 BST 2006  Olly Betts <olly@survex.com>

	* omindex.cc: Only run pdfinfo once and pull out the
	  fields we want using string operations, instead of
	  running it twice filtered through sed.

Tue Sep 05 03:53:00 BST 2006  Olly Betts <olly@survex.com>

	* htmlparse.cc,htmlparse.h: Don't get confused by "a<b" in
	  Javascript in a <script> tag.  Fixes bug#91.

Sat Sep 02 04:29:12 BST 2006  Olly Betts <olly@survex.com>

	* omindex.cc: Call pclose() not fclose() on a FILE* obtained from
	  popen().  If a filter program isn't installed, then don't try it
	  again for the same extension (not perfect but an improvement -
	  previously we indexed an empty document!)

Sat Sep 02 02:07:30 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,docs/omegascript.txt,md5.cc,md5.h,
	  md5wrap.cc,md5wrap.h,omindex.cc,query.cc,values.h: Generate