@@ -1,4 +1,11 @@
+# Directory containing Xapian databases:
 database_dir /var/lib/omega/data
+
+# Directory containing OmegaScript templates:
 template_dir /var/lib/omega/templates
+
+# Directory to write Omega logs to:
 log_dir /var/log/omega
+
+# Directory containing any cdb files for the $lookup OmegaScript command:
 cdb_dir /var/lib/omega/cdb
